--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -6,6 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Product Office Hours · Kevin Middleton</title>
 
+  <!-- SEO -->
+  <meta name="description" content="Free 30-minute product coaching sessions. Bring a messy problem—scope creep, stakeholder confusion, prioritization paralysis—and leave with a clearer head." />
+  <meta name="author" content="Kevin Middleton" />
+  <link rel="canonical" href="https://middleton.io/officehours" />
+  <link rel="icon" type="image/png" href="https://middleton.io/officehours/images/pin.png" />
+
+  <!-- LinkedIn Profile -->
+  <meta property="profile:username" content="kevinmiddleton" />
+  <link rel="me" href="https://www.linkedin.com/in/kevinmiddleton/" />
+
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Free Product Help. No Strings." />
@@ -25,7 +35,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Permanent+Marker&family=Caveat:wght@500;600;700&family=Patrick+Hand&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&family=Permanent+Marker&family=Caveat:wght@600;700&family=Patrick+Hand&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="officehours.css">
   <!-- Privacy-friendly analytics by Plausible -->
@@ -37,6 +47,7 @@
 </head>
 
 <body>
+  <a href="#cta" class="oh-skip-link">Skip to booking</a>
   <main class="oh-page">
     <!-- Floating elements -->
     <div class="oh-floats" aria-hidden="true">
@@ -49,9 +60,9 @@
     <div class="oh-container">
 
       <!-- HERO -->
-      <section class="oh-hero">
+      <header class="oh-hero">
         <div class="oh-badge">FREE & OPEN TO ALL</div>
-        <h1><span class="oh-icon">📅</span> Product Office Hours</h1>
+        <h1><span class="oh-icon" aria-hidden="true">📅</span> Product Office Hours</h1>
         <p class="subline">Bring a messy problem.<br>Leave with a clearer head.</p>
         
         <div class="oh-hero-ctas">
@@ -61,7 +72,7 @@
           </a>
           <a href="https://middleton.io/" target="_blank" rel="noopener noreferrer" class="oh-hero-link">Who's on the other side? →</a>
         </div>
-      </section>
+      </header>
 
       <!-- WHAT HAPPENS -->
       <section class="oh-section oh-whiteboard">
@@ -109,7 +120,7 @@
       <!-- CTA -->
       <section class="oh-cta" id="cta">
         <div class="oh-cta-card">
-          <div class="oh-scissors">✂</div>
+          <div class="oh-scissors" aria-hidden="true">✂</div>
 
           <p class="oh-cta-headline">Come as you are.</p>
           <a href="https://calendly.com/kevin-middleton/let-s-talk" class="btn oh-btn plausible-event-name=Calendly+Click" target="_blank">
