--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0f1115" media="(prefers-color-scheme: dark)">
     <title>Kevin Middleton - Full Stack Product Manager</title>
     <meta name="description"
         content="Kevin Middleton is a Full Stack Product Manager with 12+ years of experience building consumer, enterprise, and platform SaaS products.">
