--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -8,6 +8,10 @@
   <link rel="icon" type="image/png" href="https://middleton.io/catdad/images/sparkles.png">
   <link rel="apple-touch-icon" href="https://middleton.io/catdad/images/sparkles.png">
 
+  <!-- Theme color for browser chrome -->
+  <meta name="theme-color" content="#FFB7C5" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#1a1520" media="(prefers-color-scheme: dark)">
+
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Product Manager. Cat Dad. Seriously Unserious." />
