--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -7,6 +7,10 @@
   <title>The Fixer: Product Problem Solving | Kevin Middleton</title>
   <meta name="description" content="Something in your product isn't working. That's a solvable problem. Get 30 minutes of calm, judgment-free product thinking with someone who's been there." />
 
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#7a5a10" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#4a3510" media="(prefers-color-scheme: dark)">
+
   <!-- Favicon -->
   <link rel="icon" href="https://middleton.io/fixer/images/pill.png" type="image/png">
   <link rel="apple-touch-icon" href="https://middleton.io/fixer/images/pill.png">
