--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -28,8 +28,12 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Free Product Help. No Strings." />
-  <meta name="twitter:description" content="Office hours for product problems that don’t fit in a deck." />
+  <meta name="twitter:description" content="Office hours for product problems that don't fit in a deck." />
   <meta name="twitter:image" content="https://middleton.io/officehours/images/officehours.png" />
+
+  <!-- Browser Chrome -->
+  <meta name="theme-color" content="#e07455" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#e8916f" media="(prefers-color-scheme: dark)">
 
   <link rel="stylesheet" href="../styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
