--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -7,6 +7,10 @@
     <title>Kevin Middleton</title>
     <link rel="icon" href="https://middleton.io/kevinos/images/alien-monster.png">
     <link rel="apple-touch-icon" href="https://middleton.io/kevinos/images/alien-monster.png">
+    <!-- Theme color for browser chrome -->
+    <meta name="theme-color" content="#0a0a0f" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#f0f0f5" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0a0a0f">
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://middleton.io/kevinos/">
