--- a/recipes/index.html
+++ b/recipes/index.html
@@ -16,6 +16,8 @@
   <meta property="twitter:description" content="Easy, actually tested, picky-eater approved. Measured in grams, no life stories.">
   <meta property="twitter:image" content="https://middleton.io/recipes/images/recipes.png">
 
+  <meta name="theme-color" content="#faf8f4">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
