--- a/kevin/index.html
+++ b/kevin/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#1a1c2e">
   <title>KEVIN?! — New York's Hottest Product Manager</title>
 
   <!-- Open Graph -->
