--- a/recipes/index.html
+++ b/recipes/index.html
@@ -71,7 +71,7 @@
     </main>
 
     <footer>
-      <p>Made using a food scale by a picky eater.</p>
+      <p>Made by <a href="https://middleton.io">Kevin</a> using a food scale.</p>
     </footer>
   </div>
 
