--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -61,7 +61,7 @@
     <!-- macOS Menu Bar -->
     <header class="menubar">
         <div class="menubar-left">
-            <span class="menubar-apple"></span>
+            <a href="https://middleton.io/" class="menubar-back" title="Back to middleton.io">‹</a>
             <a href="https://middleton.io/kevinos/" class="menubar-app">KevinOS</a>
             <span class="menubar-menu">File</span>
             <span class="menubar-menu">Edit</span>
