--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -169,6 +169,11 @@
       <!-- G2 Pen -->
       <img src="https://middleton.io/fixer/images/G2Pen.png" alt="" class="g2-pen" aria-hidden="true">
 
+      <!-- Back to main site -->
+      <footer class="fixer-footer">
+        <p><a href="https://middleton.io/">← Back to middleton.io</a></p>
+      </footer>
+
     </div>
 
   </main>
