--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -111,6 +111,7 @@
           <button class="btn kawaii-btn boing" onclick="handleCTA()">Let's talk 🐱</button>
           <a href="#serious-stuff" class="btn kawaii-btn-ghost">Wait, is this person legit? →</a>
         </div>
+        <a href="https://middleton.io/kevinos/" class="escape-link" target="_blank">← try KevinOS</a>
       </section>
 
       <div class="section-divider">・。.・゜✭<br class="mobile-break">・.・✫・゜・。.</div>
