--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -91,10 +91,11 @@
           <a href="#cta" class="nyc-hero-link">Let's talk →</a>
           <a href="#proof" class="nyc-hero-link secondary">See my background →</a>
         </div>
+        <a href="https://middleton.io" target="_blank" class="nyc-hero-link secondary" style="margin-top: var(--spacing-md); display: inline-block; font-size: 0.9rem;">Full portfolio <span style="display: inline-block; transform: rotate(-45deg);">→</span></a>
       </section>
 
       <!-- WHO THIS IS FOR -->
-      <section class="nyc-section" style="margin-top: var(--spacing-xl);">
+      <section class="nyc-section">
         <h2>This page is for</h2>
         <ul class="nyc-list">
           <li>Product leaders who value judgment over theater</li>
