--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="https://middleton.io/images/wave.png">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Kevin Middleton - Full Stack Product Manager">
     <meta property="og:description"
