--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -11,6 +11,7 @@
   <meta name="author" content="Kevin Middleton" />
   <link rel="canonical" href="https://middleton.io/officehours" />
   <link rel="icon" type="image/png" href="https://middleton.io/officehours/images/pin.png" />
+  <link rel="apple-touch-icon" href="https://middleton.io/officehours/images/coffee.png" />
 
   <!-- LinkedIn Profile -->
   <meta property="profile:username" content="kevinmiddleton" />
