--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,18 @@
             "Product Strategy",
             "A/B Testing",
             "Cross-Functional Leadership"
-        ]
+        ],
+        "description": "Full Stack Product Manager with 12+ years of experience building consumer, enterprise, and platform SaaS products.",
+        "hasOccupation": {
+            "@type": "Occupation",
+            "name": "Full Stack Product Manager",
+            "occupationLocation": {
+                "@type": "City",
+                "name": "New York"
+            },
+            "description": "Product manager who brings structure to ambiguity and helps teams move faster together.",
+            "skills": "Product Strategy, SaaS, A/B Testing, Cross-Functional Leadership, Consumer Products, Enterprise Products, Platform Products"
+        }
     }
     </script>
 
