--- a/kevin/index.html
+++ b/kevin/index.html
@@ -5,7 +5,50 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#1a1c2e">
+  <meta name="description" content="New York City's hottest product manager. 12 years across consumer, enterprise, and platform. This place has everything: spreadsheets that feel like violence, human Jira boards, and the quiet confidence of a man who sourced $1.4M before he was even hired.">
+  <link rel="canonical" href="https://middleton.io/kevin">
+  <link rel="icon" type="image/png" href="https://middleton.io/kevin/images/fire.png">
+  <link rel="apple-touch-icon" href="https://middleton.io/kevin/images/fire.png">
   <title>KEVIN?! — New York's Hottest Product Manager</title>
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "KEVIN?! — New York's Hottest Product Manager",
+    "url": "https://middleton.io/kevin",
+    "description": "New York City's hottest product manager. 12 years across consumer, enterprise, and platform. This place has everything.",
+    "about": {
+      "@type": "Person",
+      "name": "Kevin Middleton",
+      "url": "https://middleton.io",
+      "sameAs": [
+        "https://www.linkedin.com/in/kevinmiddleton"
+      ],
+      "description": "Senior Product Manager with 12 years of experience across consumer, enterprise, and platform. Builds systems that help product teams not lose their minds.",
+      "hasOccupation": {
+        "@type": "Occupation",
+        "name": "Senior Product Manager",
+        "occupationalCategory": "15-1199.09",
+        "description": "Builds systems that help product teams not lose their minds. 12 years across consumer, enterprise, and platform products.",
+        "experienceRequirements": "12 years",
+        "skills": ["Product Strategy", "Consumer Products", "Enterprise Products", "Platform Products", "Team Leadership"]
+      },
+      "jobTitle": "Senior Product Manager",
+      "knowsAbout": ["Product Management", "Consumer Products", "Enterprise Products", "Platform Products"],
+      "workLocation": {
+        "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "New York",
+          "addressRegion": "NY",
+          "addressCountry": "US"
+        }
+      }
+    }
+  }
+  </script>
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
