--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -34,6 +34,93 @@
         href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&family=Outfit:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="kevinos.css">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Kevin Middleton",
+        "url": "https://middleton.io/kevinos/",
+        "image": "https://middleton.io/images/profile-picture.jpg",
+        "description": "Full Stack Product Manager with 12+ years of experience building consumer, enterprise, and platform SaaS products. I bring structure to ambiguity and help teams move faster together.",
+        "jobTitle": "Full Stack Product Manager",
+        "sameAs": [
+            "https://www.linkedin.com/in/kevinmiddleton"
+        ],
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "New York",
+            "addressRegion": "NY",
+            "addressCountry": "US"
+        },
+        "alumniOf": {
+            "@type": "CollegeOrUniversity",
+            "name": "Virginia Tech",
+            "url": "https://www.vt.edu"
+        },
+        "hasCredential": [
+            {
+                "@type": "EducationalOccupationalCredential",
+                "name": "Certified Scrum Product Owner (CSPO)"
+            },
+            {
+                "@type": "EducationalOccupationalCredential",
+                "name": "Certified ScrumMaster (CSM)"
+            },
+            {
+                "@type": "EducationalOccupationalCredential",
+                "name": "Certified Management Consultant (CMC)"
+            }
+        ],
+        "hasOccupation": {
+            "@type": "Occupation",
+            "name": "Senior Product Manager",
+            "occupationLocation": {
+                "@type": "Country",
+                "name": "United States"
+            },
+            "description": "12+ years of product management experience spanning growth, enterprise platforms, integrations, and consumer products at companies including HVAC.com, Lever, Sendoso, Rocket Lawyer, and Oracle.",
+            "skills": "Product Strategy, Roadmap & Vision, Competitive Analysis, eCommerce, B2B, Cross-Functional Leadership, Stakeholder Management, Team Building, Mentorship, Agile, Data-Driven Decision Making, User Research, A/B Testing, AI, LLM, SQL, API Development, Integration, TDD, BDD"
+        },
+        "knowsAbout": [
+            "Product Strategy",
+            "Roadmap & Vision",
+            "Competitive Analysis",
+            "eCommerce",
+            "B2B",
+            "Cross-Functional Leadership",
+            "Stakeholder Management",
+            "Team Building",
+            "Mentorship",
+            "Agile",
+            "Data-Driven Decision Making",
+            "User Research",
+            "A/B Testing",
+            "AI",
+            "LLM",
+            "SQL",
+            "API Development",
+            "Integration",
+            "TDD",
+            "BDD",
+            "Jira",
+            "Confluence",
+            "Figma",
+            "GitHub",
+            "Airtable",
+            "FullStory",
+            "Google Analytics",
+            "Mixpanel",
+            "Amplitude",
+            "Looker",
+            "Tableau",
+            "Metabase",
+            "LaunchDarkly",
+            "Optimizely",
+            "ProductBoard"
+        ]
+    }
+    </script>
     <!-- Privacy-friendly analytics by Plausible -->
     <script async src="https://plausible.io/js/pa-Ru0fCnO2UblTH4K7Q1eur.js"></script>
     <script>
