--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -58,14 +58,7 @@
       "@type": "Person",
       "@id": "https://middleton.io/#person",
       "name": "Kevin Middleton",
-      "url": "https://middleton.io/",
-      "sameAs": ["https://www.linkedin.com/in/kevinmiddleton"],
-      "description": "Product leader who helps teams untangle messy problems and ship with clarity.",
-      "hasOccupation": {
-        "@type": "Occupation",
-        "name": "Product Coach",
-        "description": "Helps product managers and teams work through scope creep, stakeholder confusion, prioritization paralysis, and roadmap challenges."
-      }
+      "url": "https://middleton.io/"
     },
     {
       "@type": "Service",
@@ -74,11 +67,22 @@
       "description": "Free 30-minute product coaching sessions. Bring a messy problem—scope creep, stakeholder confusion, prioritization paralysis—and leave with a clearer head.",
       "url": "https://middleton.io/officehours",
       "provider": { "@id": "https://middleton.io/#person" },
+      "serviceType": "Product Coaching",
       "isAccessibleForFree": true,
       "offers": {
         "@type": "Offer",
         "price": "0",
-        "priceCurrency": "USD"
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      },
+      "potentialAction": {
+        "@type": "ReserveAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://calendly.com/kevin-middleton/let-s-talk",
+          "actionPlatform": ["http://schema.org/DesktopWebPlatform", "http://schema.org/MobileWebPlatform"]
+        },
+        "name": "Book Office Hours"
       }
     }
   ]
