--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -49,6 +49,7 @@
     "name": "Kevin Middleton",
     "jobTitle": "Product Manager",
     "url": "https://middleton.io",
+    "image": "https://middleton.io/catdad/images/catdad.png",
     "sameAs": [
       "https://www.linkedin.com/in/kevinmiddleton"
     ],
@@ -59,7 +60,37 @@
       "addressCountry": "US"
     },
     "description": "Product manager with 12+ years experience building products at Oracle, Rocket Lawyer, Lever, Sendoso, and more. Believes great work comes from teams that actually like working together.",
-    "knowsAbout": ["Product Management", "Enterprise Software", "Conversion Optimization", "Complex Integrations"]
+    "knowsAbout": ["Product Management", "Enterprise Software", "Conversion Optimization", "Complex Integrations"],
+    "hasOccupation": {
+      "@type": "Occupation",
+      "name": "Product Manager",
+      "occupationLocation": {
+        "@type": "City",
+        "name": "New York City"
+      },
+      "description": "Building enterprise platforms, complex integrations, and conversion-optimized products. Specializes in cross-functional collaboration and turning ambiguous problems into shipped solutions.",
+      "experienceRequirements": "12+ years",
+      "skills": "Product Strategy, Roadmap Planning, Enterprise Software, API Integrations, Conversion Optimization, Cross-functional Leadership"
+    },
+    "makesOffer": {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "30-Minute Consultation",
+        "description": "Free introductory conversation about product management, collaboration, or career advice."
+      },
+      "price": "0",
+      "priceCurrency": "USD",
+      "url": "https://calendly.com/kevin-middleton/let-s-talk"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://middleton.io/catdad",
+      "isPartOf": {
+        "@type": "WebSite",
+        "url": "https://middleton.io"
+      }
+    }
   }
   </script>
 </head>
