--- a/index.htm
+++ b/index.htm
@@ -56,16 +56,20 @@
         },
         "alumniOf": {
             "@type": "CollegeOrUniversity",
-            "name": "Virginia Tech"
+            "name": "Virginia Tech",
+            "sameAs": "https://www.vt.edu"
         },
         "knowsAbout": [
             "Product Management",
             "SaaS",
             "Product Strategy",
             "A/B Testing",
-            "Cross-Functional Leadership"
+            "Cross-Functional Leadership",
+            "Enterprise Software",
+            "Platform Development",
+            "Data-Driven Decision Making"
         ],
-        "description": "Full Stack Product Manager with 12+ years of experience building consumer, enterprise, and platform SaaS products.",
+        "description": "Full Stack Product Manager with 12+ years of experience building consumer, enterprise, and platform SaaS products. I bring structure to ambiguity, help teams move faster together, and turn complex workflows into clear, reliable systems.",
         "hasOccupation": {
             "@type": "Occupation",
             "name": "Full Stack Product Manager",
@@ -73,8 +77,20 @@
                 "@type": "City",
                 "name": "New York"
             },
-            "description": "Product manager who brings structure to ambiguity and helps teams move faster together.",
-            "skills": "Product Strategy, SaaS, A/B Testing, Cross-Functional Leadership, Consumer Products, Enterprise Products, Platform Products"
+            "description": "Hands-on product leader who works across people, process, and product. Experienced in running meetings, digging into data, building prototypes, and turning ambiguity into maintainable systems teams can own.",
+            "skills": "Product Strategy, SaaS, A/B Testing, Cross-Functional Leadership, Consumer Products, Enterprise Products, Platform Products, User Research, Roadmapping, Agile/Scrum"
+        },
+        "makesOffer": {
+            "@type": "Offer",
+            "itemOffered": {
+                "@type": "Service",
+                "name": "Product Management Consultation",
+                "description": "Free introductory consultation to discuss product strategy, team processes, or career advice."
+            },
+            "price": "0",
+            "priceCurrency": "USD",
+            "availability": "https://schema.org/InStock",
+            "url": "https://calendly.com/kevin-middleton/let-s-talk"
         }
     }
     </script>
